end_to_end_yamls/deploy_flask_image_sekhar.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-flask-pod-9
  namespace: demo9
  labels:
    app: demo-flask-pod-9
spec:
  containers:
    - name: test-container
      image: sekharkaredla/flask-mysql-basic:trytwo
