end_to_end_yamls/read_secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-test-pod
spec:
  containers:
    - name: test-container
      image: nginx
      volumeMounts:
          # name must match the volume name below
          - name: mysqld-appscode-secret
            mountPath: /etc/secret
  # The secret data is exposed to Containers in the Pod through a Volume.
  volumes:
    - name: mysqld-appscode-secret
      secret:
        secretName: mysqld-appscode-secret
