end_to_end_yamls/expose_flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-flask-pod-svc
  namespace: demo9
  labels:
    app: demo-flask-pod-9
spec:
  ports:
  - port: 8080
    targetPort: 5000
  selector:
    app: demo-flask-pod-9
