end_to_end_yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-pod-svc
  labels:
    app: flask-pod
spec:
  ports:
  - port: 8080
    targetPort: 5000
  selector:
    app: flask-pod
