end_to_end_yamls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-hello6
spec:
  rules:
  - host: hello-flask
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service-hello5
          servicePort: 8080
